--- a/MoisDeLaNutrition/MoisDeLaNutrition/scss/2-layout/_header.scss
+++ b/MoisDeLaNutrition/MoisDeLaNutrition/scss/2-layout/_header.scss
@@ -8,7 +8,8 @@ $vhVar: 54vh;
 }
 
 .pageHeader {
-    padding: 100px 0 $vhVar 0;
+    padding-top:100px;
+    padding-bottom:$vhVar;
     background: rgb(49,175,198);
     background: url(../../images/placeholders/Bg_Pattern.svg) repeat, linear-gradient(90deg, rgba(49,175,198,1) 0%, rgba(77,208,229,1) 100%);
 }
